<resources>
    <string name="app_name">Sign UP</string>
    <string name="logo">logo</string>
    <string name="enter_email">Enter email...</string>
    <string name="enter_username">Enter user name...</string>
    <string name="enter_password">Enter password...</string>
    <string name="btnSignUP">Sign Up</string>
    <string name="btnLogIn">Log In</string>
    <string name="btnLogOut">Log Out</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">u0RMVhxCFXcnUfbwTHVRAW4NB8QYClhS5V0RL3AQ</string>
    <string name="back4app_client_key">VwtRGdyfm7eHSKlrGM7fR6sATGPB72Gki2VNURUO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <string name="btnUpdateInfo">Update info</string>

    <string name="hintProfileName">Please enter profile name...</string>
    <string name="hintBio">Please enter your bio...</string>
    <string name="hintProfession">Please enter your profession...</string>
    <string name="hintHobbies">Please enter your hobbies...</string>
    <string name="hintFavoriteSport">Please enter your favorite sport...</string>
</resources>
